fix folder name overflow issue

--- a/app/static/components/outline-view.less
+++ b/app/static/components/outline-view.less
@@ -111,7 +111,8 @@
       color: #000;
       font-size: 11px;
       letter-spacing: 0.17px;
-      line-height: 13px;
+      line-height: 28px;
+      white-space: nowrap;
     }
     .item-count-box {
       order: 3;
